Fix nav positioning too low

--- a/src/drop-down-menu/styles.css
+++ b/src/drop-down-menu/styles.css
@@ -100,8 +100,7 @@ nav:hover {
 }
 
 .hamburger-menu.container {
-  position: relative;
-  border: 1px solid red;
+  position: absolute;
   height: 100%;
   display: flex;
   align-items: center;
@@ -115,7 +114,7 @@ nav:hover {
   width: 40px;
   height: 40px;
   filter: invert(1);
-  margin-left: 10px;
+  margin: 0 10px;
 }
 
 .hamburger-menu.container img:hover {
